Changed style and fixed dark mode

--- a/frontend/splash-frontend/src/assets/main.css
+++ b/frontend/splash-frontend/src/assets/main.css
@@ -25,9 +25,9 @@
 }
 
 [data-theme="dark"] {
-  --custom-primary: #218ccb;
-  --custom-secondary: #979892;
-  --custom-accent: #fcf5ee;
+  --custom-primary: #4ab3f4;
+  --custom-secondary: #c1c2bd;
+  --custom-accent: #2b2b2b;
 
   --custom-bg: #1e1e1e;
   --custom-surface: #2a2a2a;
